ags (2.2.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved LV2 RDF Turtle parser to handle applies to

ags (2.2.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed check NULL of filename and effect in ags_lv2_manager_find_lv2_plugin()
	* fixed check NULL of filename in ags_base_plugin_find_filename()
	* improved LV2 RDF Turtle parser to handle prefixed names

ags (2.2.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AppStream metadata license
	* fixed ags/test/X/libgsequencer.h removed include

ags (2.2.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed API Reference manual

ags (2.2.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsLv2TurtleParser
	* implemented AgsCursor interface
	* implemented AgsOscExportController
	* fixed potential SIGSEGV as reading malformed RDF Turtle
	* improved license and copyright notices for various files
	* minor improvements and fixes
	* added NEWS entry

ags (2.1.78)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented prefix id hash table of AgsTurtle

ags (2.1.77)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential SIGSEGV in ags_simple_file.c

ags (2.1.76)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved running integration tests using automake conditional
	* improved mutexes with AgsUiProvider in ags_xorg_application_context.c
	* improved mutex in ags_playback_domain_get_audio_thread()
	* improved mutexes in ags_recall_set_staging_flags()

ags (2.1.75)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed developer's handbook deprecated use of AgsGroupId, replaced by AgsRecallID
	* fixed developer's handbook deprecated use of AgsRecall ::resolve-dependencies(), it is now ::resolve-dependency()
	* improved ags_sound_card_editor_reset() to apply backend properly

ags (2.1.74)
